--- a/index.html
+++ b/index.html
@@ -5,12 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="feladat1.css">
+    <link rel="stylesheet" href="feladat2.css">
+    <link rel="stylesheet" href="feladat3.css">
+    <link rel="stylesheet" href="feladat4.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container1">
         <div class="d1"></div>
         <div class="d2"></div>
         <div class="d3"></div>
     </div>
+
+    <ul class="container2">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+
+    <ul class="container3">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    
+    <ul class="container4">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 </body>
 </html>
